# chess

./: README.md
ChessEngine/: CMakeLists.txt  README.md  config.txt
ChessEngine/.devcontainer/: Dockerfile  devcontainer.json
ChessEngine/include/: AIPlayer.h  Board.h  ChessEngine.h  Evaluator.h  Move.h  Piece.h  Solver.h
ChessEngine/src/: AIPlayer.cpp  Board.cpp  ChessEngine.cpp  Evaluator.cpp  Move.cpp  Piece.cpp  Solver.cpp  main.cpp
